[package]
name = "r-sysdeps"
version = "0.1.0"
authors = ["Jonathan Curran <jonathan@curran.in>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
minreq = { version = "2.3.0", features = ["https", "json-using-serde", "proxy"] }
