[package]
name = "r-sysdeps"
version = "0.1.0"
authors = ["Jonathan Curran <jonathan@curran.in>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
minreq = { version = "2.3.0", features = ["https", "json-using-serde", "proxy"] }
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3"
